...
            }

            Tab("For You", systemImage: "heart.text.square", value: .forYou) {
                ForYouCoordinator.start(serviceLocator: serviceLocator)
            }

            Tab("Categories", systemImage: "square.grid.2x2", value: .categories) {
                CategoriesCoordinator.start(serviceLocator: serviceLocator)
            }

            Tab("Bookmarks", systemImage: "bookmark", value: .bookmarks) {
                BookmarksCoordinator.start(serviceLocator: serviceLocator)
            }
...
